@@ -1133,3 +1133,4 @@
 ( cvs diff -u -r 1.60.2.22 -r 1.60.2.23 po/es.po;  ) > 1.9.100cvs147.patchset
 ( cvs diff -u -r 1.61.2.42 -r 1.61.2.43 src/account.c;  cvs diff -u -r 1.9.2.7 -r 1.9.2.8 src/addressadd.c;  cvs diff -u -r 1.60.2.42 -r 1.60.2.43 src/addressbook.c;  cvs diff -u -r 1.382.2.220 -r 1.382.2.221 src/compose.c;  cvs diff -u -r 1.14.2.13 -r 1.14.2.14 src/editaddress.c;  cvs diff -u -r 1.5.12.5 -r 1.5.12.6 src/editbook.c;  cvs diff -u -r 1.11.2.9 -r 1.11.2.10 src/editgroup.c;  cvs diff -u -r 1.5.12.8 -r 1.5.12.9 src/editjpilot.c;  cvs diff -u -r 1.8.2.10 -r 1.8.2.11 src/editldap.c;  cvs diff -u -r 1.5.12.7 -r 1.5.12.8 src/editvcard.c;  cvs diff -u -r 1.3.2.14 -r 1.3.2.15 src/exphtmldlg.c;  cvs diff -u -r 1.1.4.16 -r 1.1.4.17 src/expldifdlg.c;  cvs diff -u -r 1.207.2.82 -r 1.207.2.83 src/folderview.c;  cvs diff -u -r 1.14.2.14 -r 1.14.2.15 src/grouplistdialog.c;  cvs diff -u -r 1.1.2.26 -r 1.1.2.27 src/imap_gtk.c;  cvs diff -u -r 1.4.12.10 -r 1.4.12.11 src/importmutt.c;  cvs diff -u -r 1.1.14.10 -r 1.1.14.11 src/importpine.c;  cvs diff -u -r 1.149.2.40 -r 1.149.2.41 src/inc.c;  cvs diff -u -r 1.115.2.72 -r 1.115.2.73 src/main.c;  cvs diff -u -r 1.274.2.88 -r 1.274.2.89 src/mainwindow.c;  cvs diff -u -r 1.3.12.12 -r 1.3.12.13 src/message_search.c;  cvs diff -u -r 1.94.2.74 -r 1.94.2.75 src/messageview.c;  cvs diff -u -r 1.2.2.16 -r 1.2.2.17 src/mh_gtk.c;  cvs diff -u -r 1.83.2.57 -r 1.83.2.58 src/mimeview.c;  cvs diff -u -r 1.2.2.13 -r 1.2.2.14 src/news_gtk.c;  cvs diff -u -r 1.60.2.29 -r 1.60.2.30 src/prefs_actions.c;  cvs diff -u -r 1.16.2.16 -r 1.16.2.17 src/prefs_customheader.c;  cvs diff -u -r 1.59.2.29 -r 1.59.2.30 src/prefs_filtering.c;  cvs diff -u -r 1.43.2.31 -r 1.43.2.32 src/prefs_matcher.c;  cvs diff -u -r 1.12.2.20 -r 1.12.2.21 src/prefs_template.c;  cvs diff -u -r 1.3.2.36 -r 1.3.2.37 src/prefs_themes.c;  cvs diff -u -r 1.3.2.17 -r 1.3.2.18 src/ssl_manager.c;  cvs diff -u -r 1.15.2.19 -r 1.15.2.20 src/summary_search.c;  cvs diff -u -r 1.395.2.155 -r 1.395.2.156 src/summaryview.c;  cvs diff -u -r 1.96.2.89 -r 1.96.2.90 src/textview.c;  cvs diff -u -r 1.43.2.36 -r 1.43.2.37 src/toolbar.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/gtk/foldersort.c;  cvs diff -u -r 1.9.2.34 -r 1.9.2.35 src/gtk/gtkaspell.c;  cvs diff -u -r 1.2.2.14 -r 1.2.2.15 src/gtk/inputdialog.c;  cvs diff -u -r 1.12.2.24 -r 1.12.2.25 src/gtk/prefswindow.c;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/plugins/pgpcore/select-keys.c;  cvs diff -u -r 1.14.2.31 -r 1.14.2.32 src/plugins/trayicon/trayicon.c;  ) > 1.9.100cvs148.patchset
 ( cvs diff -u -r 1.61.2.43 -r 1.61.2.44 src/account.c;  cvs diff -u -r 1.60.2.43 -r 1.60.2.44 src/addressbook.c;  cvs diff -u -r 1.382.2.221 -r 1.382.2.222 src/compose.c;  cvs diff -u -r 1.207.2.83 -r 1.207.2.84 src/folderview.c;  cvs diff -u -r 1.1.2.27 -r 1.1.2.28 src/imap_gtk.c;  cvs diff -u -r 1.274.2.89 -r 1.274.2.90 src/mainwindow.c;  cvs diff -u -r 1.2.2.17 -r 1.2.2.18 src/mh_gtk.c;  cvs diff -u -r 1.2.2.14 -r 1.2.2.15 src/news_gtk.c;  cvs diff -u -r 1.60.2.30 -r 1.60.2.31 src/prefs_actions.c;  cvs diff -u -r 1.16.2.17 -r 1.16.2.18 src/prefs_customheader.c;  cvs diff -u -r 1.59.2.30 -r 1.59.2.31 src/prefs_filtering.c;  cvs diff -u -r 1.43.2.32 -r 1.43.2.33 src/prefs_matcher.c;  cvs diff -u -r 1.12.2.21 -r 1.12.2.22 src/prefs_template.c;  cvs diff -u -r 1.3.2.18 -r 1.3.2.19 src/ssl_manager.c;  cvs diff -u -r 1.395.2.156 -r 1.395.2.157 src/summaryview.c;  cvs diff -u -r 1.96.2.90 -r 1.96.2.91 src/textview.c;  cvs diff -u -r 1.43.2.37 -r 1.43.2.38 src/toolbar.c;  ) > 1.9.100cvs149.patchset
+( cvs diff -u -r 1.1.4.22 -r 1.1.4.23 src/prefs_filtering_action.c;  cvs diff -u -r 1.26.2.23 -r 1.26.2.24 src/foldersel.c;  ) > 1.9.100cvs150.patchset
