@@ -1,3 +1,9 @@
+2006-01-14 [colin]	1.9.100cvs150
+
+	* src/prefs_filtering_action.c
+	* src/foldersel.c
+		Two forgotten button order changes
+
 2006-01-14 [colin]	1.9.100cvs149
 
 	* src/account.c
